--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <div class="table-cell">
                                     <div class="hero-left">
                                         <h4>#1 flexible and light weight online gateway</h4>
-                                        <h1>Start Transection with us to get a special voucher</h1>
+                                        <h1>Start transactions with us and create your own wallets.</h1>
                                         <a href="register.html" class="bttn-mid btn-fill"><i class="fa fa-pencil" aria-hidden="true"></i>
                                         </i>Register</a>
                                         <a href="login.html" class="bttn-mid btn-emt"><i class="fa fa-unlock-alt" aria-hidden="true"></i>
