--- a/money-transfer.html
+++ b/money-transfer.html
@@ -133,8 +133,12 @@
                                                     <label for="currencygsd">Curreny</label>
                                                     <select name="currency-select" class="select-bar" id="currencygsd">
                                                         <option value="">USD</option>
-                                                        <option value="">CAD</option>
+                                                        <option value="">CD</option>
+                                                        <option value="">EU</option>
                                                         <option value="">GBP</option>
+                                                        <option value="">YEN</option>
+                                                        <option value="">EU</option>
+                                                        <option value="">Rupee</option>
                                                     </select>
                                                 </div>
                                                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
@@ -142,7 +146,7 @@
                                                     <input type="text" readonly="readonly" value="0" id="chargedfffffg">
                                                 </div>
                                                 <div class="col-xl-8 col-lg-8 col-md-8 col-sm-6">
-                                                    <input type="email" placeholder="Receiver Username / Email /Phone">
+                                                    <input type="email" placeholder="Receiver's public key">
                                                 </div>
                                                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                                                    <button type="submit">Transfer money</button>
