--- a/request-money.html
+++ b/request-money.html
@@ -136,13 +136,17 @@
                                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                                         <label for="currencygsd">Curreny</label>
                                                         <select name="currency-select" class="select-bar" id="currencygsd">
-                                                            <option value="">USD</option>
-                                                            <option value="">CAD</option>
-                                                            <option value="">GBP</option>
+                                                        <option value="">USD</option>
+                                                        <option value="">CD</option>
+                                                        <option value="">EU</option>
+                                                        <option value="">GBP</option>
+                                                        <option value="">YEN</option>
+                                                        <option value="">EU</option>
+                                                        <option value="">Rupee</option>
                                                         </select>
                                                     </div>
                                                     <div class="col-xl-8 col-lg-8 col-md-8 col-sm-6">
-                                                        <input type="email" placeholder="Receiver Username / Email /Phone">
+                                                        <input type="email" placeholder="">
                                                     </div>
                                                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                                                        <button type="submit">Send Request</button>
@@ -179,7 +183,7 @@
                                                 <table class="table table-striped">
                                                     <thead class="thead-dark">
                                                         <tr>
-                                                        <th scope="col">Trx</th>
+                                                        <th scope="col">Transaction ID</th>
                                                         <th scope="col">Date</th>
                                                         <th scope="col">Username</th>
                                                         <th scope="col">Amount</th>
