--- a/profile.html
+++ b/profile.html
@@ -110,7 +110,7 @@
                             <li><a href="money-transfer.html">Money Transfer</a></li>
                             <li><a href="request-money.html">Request Money</a></li>
                  
-                            <li><a href="transection-log.html">Transection Log</a></li>
+                            <li><a href="transaction-log.html">Transection Log</a></li>
                             <li><a href="invoice.html">Invoice</a></li>
                           
                         </ul>
@@ -133,7 +133,7 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                                 <div class="single-currency-box">
-                                    <h4>Bank Account</h4>
+                                    <h4>New Wallet</h4>
                                     <p><i class="ti-check"></i> Holdings Bank Corp</p>
                                 </div>
                             </div>
@@ -182,8 +182,6 @@
                                         <div class="left-info">
                                             <p>Password</p>
                                             <p>Mobile Number</p>
-                                            <p>2F Verification</p>
-                                            <p>Security question</p>
                                         </div>
                                     </div>
                                     <div class="col-sm-9 col-7">
@@ -207,8 +205,7 @@
                                 <div class="row">
                                     <div class="col-sm-3 col-5">
                                         <div class="left-info">
-                                            <p>Primary Email</p>
-                                            <p>Secondary Email</p>
+                                            <p>Email</p>
                                         </div>
                                     </div>
                                     <div class="col-sm-9 col-7">
@@ -234,7 +231,6 @@
                                             <p>Language</p>
                                             <p>Time Zone</p>
                                             <p>Account Type</p>
-                                            <p>Logged In Devices</p>
                                         </div>
                                     </div>
                                     <div class="col-sm-9 col-7">
