--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="col-xl-7 centered">
                         <div class="section-title cl-white">
                             <h2>Services</h2>
-                            <p>Distinctio necessitatibus atque voluptatem nesciunt quae corporis. Omnis iste laudantium tenetur, temporibus ipsa nemo ullam.</p>
+                            <p>Our app offers various services like creation of personal wallets,online payments etc with just a click of a button.</p>
                         </div>
                     </div>
                 </div>
@@ -128,24 +128,21 @@
                         <div class="single-box">
                             <img src="images/icons/1.png" alt="">
                             <h3>How to spend</h3>
-                            <p>A better way to present your money using fully featured digital</p>
-                            <a href="" class="bttn-small btn-fill">Learn more</a>
+                            <p>A better way to present your money which will help one to track down their expenditures.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                         <div class="single-box">
                             <img src="images/icons/2.png" alt="">
                             <h3>Money Transfer</h3>
-                            <p>A better way to present your money using fully featured digital</p>
-                            <a href="" class="bttn-small btn-fill">Learn more</a>
+                            <p>A better way to deal with all your money transfers and payments.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                         <div class="single-box">
                             <img src="images/icons/3.png" alt="">
                             <h3>Deposit</h3>
-                            <p>A better way to present your money using fully featured digital</p>
-                            <a href="" class="bttn-small btn-fill">Learn more</a>
+                            <p>A better way to present your money using fully featured digital wallets.</p>
                         </div>
                     </div>
                     
@@ -162,7 +159,6 @@
                 <div class="col-xl-6 centered">
                     <div class="section-title cl-white">
                         <h2>Why We're special</h2>
-                        <p>Exercitationem vitae a eos quaerat assumenda. Tempore repellendus qui error laudantium nemo, quis</p>
                     </div>
                 </div>
             </div>
@@ -172,15 +168,15 @@
                         <i class="fa fa-bolt" aria-hidden="true"></i>
 
                         <h4>Instant Transection</h4>
-                        <p>Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him</p>
+                        <p>Making transactions fast and easy with just one click.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-feature-2">
                         <i class="fa fa-print" aria-hidden="true"></i>
 
-                        <h4>Varify process</h4>
-                        <p>Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him</p>
+                        <h4>Verified process</h4>
+                        <p>All trensactions and payments follow a verified process that makes sure there are no money thefts.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
