--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="single-feature-2">
                         <i class="fa fa-bolt" aria-hidden="true"></i>
 
-                        <h4>Instant Transection</h4>
+                        <h4>Instant Transaction</h4>
                         <p>Making transactions fast and easy with just one click.</p>
                     </div>
                 </div>
@@ -176,15 +176,15 @@
                         <i class="fa fa-print" aria-hidden="true"></i>
 
                         <h4>Verified process</h4>
-                        <p>All trensactions and payments follow a verified process that makes sure there are no money thefts.</p>
+                        <p>All transactions and payments follow a verified process that ensures safe money mobility.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-feature-2">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
 
-                        <h4>Location Tracking</h4>
-                        <p>Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him</p>
+                        <h4>Transparency</h4>
+                        <p>Its transaction ledger for public addresses is open to viewing and offers a great amount of transparency.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
