--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <i class="fa fa-print" aria-hidden="true"></i>
 
                         <h4>Verified process</h4>
-                        <p>All transactions and payments follow a verified process that ensures safe money mobility.</p>
+                        <p>All transactions and payments are encrypted and linked to the previous one following a verified process that ensures safe money mobility.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
@@ -191,16 +191,16 @@
                     <div class="single-feature-2">
                         <i class="fa fa-shopping-bag" aria-hidden="true"></i>
 
-                        <h4>Buying option</h4>
-                        <p>Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him</p>
+                        <h4>Increased Efficiency</h4>
+                        <p>Due to its decentralized nature,it removes the need for middlemen in many processes for fields such as payments and real estate in comparison to traditional financial services and facilitates faster transactions by allowing P2P cross-border transfers with a digital currency</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-feature-2">
                         <i class="fa fa-bell" aria-hidden="true"></i>
 
-                        <h4>Getting Notifications</h4>
-                        <p>Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him</p>
+                        <h4>Traceability</h4>
+                        <p>With the blockchain ledger, each time an exchange of goods is recorded,an audit trail is present to trace where the goods came from this improves security and prevent fraud in exchange-related businesses.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
@@ -222,7 +222,7 @@
             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 centered">
                 <div class="footer-widget">
                     <a href=""><img src="images/logo.png" alt=""></a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dicta dignissimos enim reprehenderit minima repudiandae animi inventore expedita fugit. Nam natus tempore incidunt, ipsum minus esse et excepturi iusto ipsam!</p>
+                    <p>Paywall offers all the solutions to your payments and transaction related problems in an instant with 'trustless’ procedures – meaning that parties do not need trust to transact safely.</p>
                     <div class="social">
                         <a href="" class="cl-facebook"><i class="fa fa-facebook"></i></a>
                         <a href="" class="cl-twitter"><i class="fa fa-twitter"></i></a>
