--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                     <div class="single-feature-2">
                         <i class="fa fa-heart" aria-hidden="true"></i>
 
-                        <h4>Way you love</h4>
-                        <p>Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him</p>
+                        <h4>Reduced Costs</h4>
+                        <p>No need of middleman,just trust the data on the blockchain and carry out transactions at reduced costs.</p>
                     </div>
                 </div>
             </div>
