--- a/profile.html
+++ b/profile.html
@@ -95,7 +95,7 @@
           opacity: 0.8;
         }
         
-        /* Add a red background color to the cancel button */
+        /* Add a red background color to the cancel buton */
         .form-container .cancel {
           background-color: red;
         }
